<resources>
    <string name="app_name">Hive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- bottom_nav_menu -->
    <string name="home_title_bottom_nav_menu">Home</string>
    <string name="service_title_bottom_nav_menu">Services</string>
    <string name="notification_title_bottom_nav_menu">Notification</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">submit</string>
    <string name="login_b">LOGIN</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account? Sign Up!</string>

    <!-- fragment_app_user -->
    <string name="title_fragment_app_user">I want to</string>
    <string name="get_hired_fragment_app_user">Get Hired</string>
    <string name="hire_fragment_app_user">Hire</string>

    <!-- fragment_customer_services -->
    <string name="construction_worker_text_fragment_customer_services">Construction</string>
    <string name="cook_text_fragment_customer_services">Cook</string>
    <string name="doctor_text_fragment_customer_services">Doctor</string>
    <string name="investigator_text_fragment_customer_services">Investigator</string>
    <string name="lawyer_text_fragment_customer_services">Lawyer</string>
    <string name="plumber_text_fragment_customer_services">Plumber</string>
    <string name="security_text_fragment_customer_services">Security</string>
    <string name="waiter_text_fragment_customer_services">Waiter</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="city">City</string>
    <string name="customer">Customer</string>
    <string name="service_provider">Service Provider</string>
    <string name="already_have_an_account_sign_in">Already have an Account? Sign In!</string>
    <string name="todo">TODO</string>
    <string name="service_type">Service Type</string>
    <string name="hourly_rate">Hourly Rate</string>


    <string-array name="array_service_type">
        <item>Constructor</item>
        <item>Cook</item>
        <item>Doctor</item>
        <item>Investigator</item>
        <item>Lawyer</item>
        <item>Plumber</item>
        <item>Security</item>
        <item>Waiter</item>
    </string-array>

</resources>