<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/main_background"
    tools:context=".AppUserTypeSelectFragment">

    <TextView
        android:id="@+id/title_app_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title_fragment_app_user"
        android:layout_marginTop="100dp"
        android:textColor="@color/text"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_app_user"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hire_btn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/button_primary"
            android:text="@string/hire_fragment_app_user" />

        <Button
            android:id="@+id/get_hired_btn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/button_primary"
            android:layout_marginLeft="15dp"
            android:text="@string/get_hired_fragment_app_user" />
    </LinearLayout>
</RelativeLayout>