<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    android:gravity="center_vertical"
    android:layout_gravity="fill_horizontal"
    android:layout_margin="2dp"
    android:padding="12dp"
    android:backgroundTint="@color/shadow_background"
    >
    <ImageView
        android:id="@+id/service_provider_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:src="@drawable/service_provider"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textFontWeight="10"
            android:textColor="@color/text"
            android:text="@string/name"
            android:layout_marginVertical="2dp"
            android:textSize="18sp"
            android:id="@+id/tv_name"
            />
        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="1dp"
            android:text="@string/mobile"
            android:textColor="@color/text"
            android:textSize="12sp"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textColor="@color/text"
        android:textSize="16sp"
        />
        <TextView
            android:id="@+id/tv_uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:visibility="gone"
            android:textSize="16sp"
            />
        <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:visibility="gone"
        android:textSize="16sp"
        />
    </LinearLayout>
</LinearLayout>